--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
+    "react-leaflet-geosearch": "^0.3.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
